--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "linkedin",
   "version": "0.0.0",
   "dependencies": {},
+  "scripts": {
+    "postinstall": "bower install",
+    "start": "grunt debug"
+  },
   "devDependencies": {
     "grunt": "~0.4.1",
     "grunt-contrib-copy": "~0.5.0",
@@ -23,7 +27,9 @@
     "time-grunt": "~0.3.1",
     "jshint-stylish": "~0.1.5",
     "grunt-chrome-manifest": "~0.2.0",
-    "grunt-contrib-compress": "~0.9.1"
+    "grunt-contrib-compress": "~0.9.1",
+    "grunt-cli": "^0.1.13",
+    "bower": "^1.4.1"
   },
   "engines": {
     "node": ">=0.8.0"
