frontend changes, show badges on list, admin console

--- a/app/manifest.json
+++ b/app/manifest.json
@@ -20,7 +20,26 @@
   "content_scripts": [
     {
       "matches": [
-        "https://www.linkedin.com/profile/*"
+        "https://www.linkedin.com/sales/search*"
+      ],
+      "css": [
+        "scripts/libs/taggle.js/assets/css/taggle.min.css",
+        "scripts/content/templates.css"
+      ],
+      "js": [
+        "scripts/content/storage.js",
+        "scripts/libs/taggle.js/src/taggle.js",
+        "scripts/libs/transparency/dist/transparency.min.js",
+        "scripts/libs/lodash/lodash.min.js",
+        "scripts/content/constants.js",
+        "scripts/content/searchcontentscript.js"
+      ],
+      "run_at": "document_idle",
+      "all_frames": false
+    },
+    {
+      "matches": [
+        "https://www.linkedin.com/sales/profile/*"
       ],
       "css": [
         "scripts/libs/taggle.js/assets/css/taggle.min.css",
