--- a/bower.json
+++ b/bower.json
@@ -7,7 +7,8 @@
     "angular": "~1.3.15",
     "materialize": "~0.95.3",
     "jquery": "~2.1.3",
-    "lodash": "~3.6.0"
+    "lodash": "~3.6.0",
+    "angular-i18n": "~1.3.15"
   },
   "devDependencies": {}
 }
